[gd_scene load_steps=4 format=3 uid="uid://qli2jd2u7npw"]

[ext_resource type="Theme" uid="uid://drkq4gwhuu362" path="res://mess-to-be-cleaned/ui/shared/graphics/themes/default_label.tres" id="1_1n77n"]
[ext_resource type="Script" uid="uid://361yvm7fvkcg" path="res://UI/shared/settings/controls.gd" id="1_ntx1o"]

[sub_resource type="ButtonGroup" id="ButtonGroup_jhesj"]
allow_unpress = true

[node name="MarginContainer" type="MarginContainer"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.75
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
script = ExtResource("1_ntx1o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_1n77n")
text = "Sterowanie"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1n77n")
text = "↑"
horizontal_alignment = 1

[node name="go_up" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_jhesj")
text = "W"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1n77n")
text = "↓"
horizontal_alignment = 1

[node name="go_down" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_jhesj")
text = "S"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1n77n")
text = "←"
horizontal_alignment = 1

[node name="go_left" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_jhesj")
text = "A"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1n77n")
text = "→"
horizontal_alignment = 1

[node name="go_right" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_jhesj")
text = "D"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1n77n")
theme_override_font_sizes/font_size = 18
text = "interakcja"
horizontal_alignment = 1

[node name="interact" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "E"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.35
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="navigation" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer/navigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cofnij"

[node name="Save" type="Button" parent="VBoxContainer/MarginContainer/navigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zapisz"

[connection signal="pressed" from="VBoxContainer/MarginContainer/navigation/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/navigation/Save" to="." method="_on_back_pressed"]
